[package]
name = "munum"
version = "0.2.0"
edition = "2021"
authors = ["Andy K. S. Wong <andykswong@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andykswong/munum"
homepage = "https://github.com/andykswong/munum"
documentation = "https://docs.rs/munum"
description = "Micro 3D Math Library"
categories = ["mathematics", "no-std", "wasm"]
keywords = ["math", "matrix", "3d", "munum"]

[package.metadata.component]
package = "munum:wasm"

[package.metadata.docs.rs]
features = ["jsmath", "libm", "std", "serde", "wasm"]

[features]
default = ["std"]
std = [
    "num/std"
]
libm = [
    "num/libm"
]
wasm = []
jsmath = []

[dependencies]
num = { version = "0.4", default-features = false }
paste = { version = "1.0" }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"
panic = "abort"
codegen-units = 1
